--- a/client/client.html
+++ b/client/client.html
@@ -11,8 +11,8 @@
     <ul>
         <li ng-repeat="member in members">
             Number : {{member.id}}<br/>
-            Name : {{member.name}}<br/>
-            Plan : {{member.plan}}<br/>
+            Name : {{member.username}}<br/>
+            Password : {{member.password}}<br/>
         </li>
     </ul>
 </div>
