--- a/bin/addEvent.html
+++ b/bin/addEvent.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>AddEvent</title>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-$END$
+<label for="evt">Event: </label>
+<input type="text" class="form-control" id="evt"/>
+<label for="desc">Description:</label>
+<textarea rows="5" class="form-control" id="desc"></textarea>
+<label for="date">Date:</label>
+<input type="date" class="form-control" id="date"/>
+<label for="pic">Views:</label>
+<input type="image" class="form-control" id="pic"/>
 </body>
 </html>
