--- a/bin/client.html
+++ b/bin/client.html
@@ -17,9 +17,10 @@
     <form>
         <div class="form-group">
             <label for="usr">Name: </label>
-            <input type="text" class="form-control half" id="usr">
+            <input type="text" class="form-control" id="usr">
             <label for="pwd">Password:</label>
-            <input type="password" class="form-control half" id="pwd">
+            <input type="password" class="form-control" id="pwd">
+            <input type="submit" class="form-control">
         </div>
     </form>
 </div>
