--- a/bin/client.html
+++ b/bin/client.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <style>
-        .half{
-            width:50%;
+        .right{
+
         }
     </style>
     <meta charset="UTF-8">
@@ -14,13 +14,13 @@
 </head>
 <body>
 <div class="container">
-    <form>
+    <form class="form-inline right pull-right">
         <div class="form-group">
             <label for="usr">Name: </label>
             <input type="text" class="form-control" id="usr">
             <label for="pwd">Password:</label>
             <input type="password" class="form-control" id="pwd">
-            <input type="submit" class="form-control">
+            <button type="submit" class="btn btn-default">submit</button>
         </div>
     </form>
 </div>
