--- a/bin/client.html
+++ b/bin/client.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div class="container">
+    <button class="btn btn-default pull-left"> <a href="addEvent.html">+</a> </button>
     <form class="form-inline right pull-right">
         <div class="form-group">
             <label for="usr">Name: </label>
