tambahan view page dengan dummy pics

--- a/bin/client.html
+++ b/bin/client.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        .right{
 
-        }
-    </style>
     <meta charset="UTF-8">
     <title>Tripster</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,7 +13,7 @@
     <button class="btn btn-default pull-left"> <a href="addEvent.html">+</a> </button>
     <form class="form-inline right pull-right">
         <div class="form-group">
-            <label for="usr">Name: </label>
+            <label for="usr">ID: </label>
             <input type="text" class="form-control" id="usr">
             <label for="pwd">Password:</label>
             <input type="password" class="form-control" id="pwd">
@@ -36,7 +32,7 @@
     <tr>
     <tr>
         <th>Owner</th>
-        <th>Event Name</th>
+        <th>Trip Name</th>
         <th>Date</th>
         <th>Destination</th>
         <th>Members</th>
