--- a/bin/addEvent.html
+++ b/bin/addEvent.html
@@ -16,6 +16,9 @@
 <label for="date">Date:</label>
 <input type="date" class="form-control" id="date"/>
 <label for="pic">Views:</label>
-<input type="image" class="form-control" id="pic"/>
+<input type="file" class="" accept="image/*" multiple="multiple" id="pic"/>
+<br/>
+<button type="submit" class="btn btn-default">submit</button>
+
 </body>
 </html>
