--- a/bin/client.html
+++ b/bin/client.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
+    <script src="client1.js"></script>
 </head>
-<body>
+<body ng-app="myApp" ng-controller="MainCtrl">
 <div class="container">
     <form>
         <div class="form-group">
@@ -41,13 +43,10 @@
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>test owner</td>
-        <td>test event</td>
-        <td>test date</td>
-        <td>test destination</td>
-        <td>test member</td>
-
+    <tr ng-repeat="member in members">
+        <td>{{member.username}}</td>
+        <td>{{member.title}}</td>
+        <td>{{member.totalFollower}}</td>
     </tr>
     </tbody>
         </table>
