--- a/bin/client.html
+++ b/bin/client.html
@@ -10,7 +10,14 @@
 </head>
 <body>
 <div class="container">
-    <button class="btn btn-default pull-left"> <a href="addEvent.html">+</a> </button>
+
+    <!--hide before login, -->
+    <div class="pull-left">
+    <label >Welcome,  {{Name here}}!  </label>
+    <button class="btn btn-default ">  <a href="addEvent.html"> add trip</a> </button>
+    </div>
+
+    <!--Hide after login-->
     <form class="form-inline right pull-right">
         <div class="form-group">
             <label for="usr">ID: </label>
@@ -20,11 +27,39 @@
             <button type="submit" class="btn btn-default">submit</button>
         </div>
     </form>
+
+
 </div>
-<div class="jumbotron text-center">
+
+<div class="jumbotron text-center red">
     <h1> Tripster</h1>
     <p> our travel partner</p>
 </div>
+<div class="container text-center">
+    <div class="row">
+        <div class="col-sm-4">
+            <img src="map.png" align="middle">
+            <h3>Broadcast Your Trip</h3>
+            <p>Have a plan for this weekend?</p>
+            <p>You can now broadcast your trip plan while staying in Korea</p>
+        </div>
+
+        <div class="col-sm-4">
+            <img src="people.png" align="middle">
+            <h3>Get Members</h3>
+            <p>By broadcasting your event, other ICT.IDN program members who also interested can join your trip.</p>
+
+        </div>
+        <div class="col-sm-4">
+            <img src="road-joining.png" align="middle">
+            <h3>Join other Trip</h3>
+            <p>If you're interested in joining a trip but lazy to plan go find someone who need accompany in their trip</p>
+
+        </div>
+    </div>
+</div>
+
+<!--Hide this below before login, show after login-->
 <div class="container">
     <h3>list of trips</h3>
     <table class="table table-striped">
@@ -51,5 +86,7 @@
         </table>
 </div>
 
+<footer class="pull-right">	 <a href="https://www.facebook.com/indrabarunaputra">I.</a><a href="https://www.facebook.com/mohammad.syahidwildan">W.</a><a href="https://www.facebook.com/iffah.k.nisrina">I.</a> &copy; 2016 Ajou University</footer>
 </body>
+
 </html>
