--- a/bin/addEvent.html
+++ b/bin/addEvent.html
@@ -5,20 +5,24 @@
     <title>AddEvent</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="addEvent.js"></script>
 
 </head>
-<body>
+<body ng-app="myApp" ng-controller="MainCtrl">
+<label for="evt">ID </label>
+<input type="text" class="form-control" id="id" ng-model="creatorid"/>
 <label for="evt">Event: </label>
-<input type="text" class="form-control" id="evt"/>
+<input type="text" class="form-control" id="evt" ng-model="destination"/>
 <label for="desc">Description:</label>
-<textarea rows="5" class="form-control" id="desc"></textarea>
+<textarea rows="5" class="form-control" id="desc" ng-model="description"></textarea>
 <label for="date">Date:</label>
-<input type="date" class="form-control" id="date"/>
+<input type="date" class="form-control" id="date" ng-model="date"/>
 <label for="pic">Views:</label>
 <input type="file" class="" accept="image/*" multiple="multiple" id="pic"/>
 <br/>
-<button type="submit" class="btn btn-default">submit</button>
+<button type="submit" ng-click="submit()" class="btn btn-default">submit</button>
 
 </body>
 </html>
