--- a/client/client.html
+++ b/client/client.html
@@ -13,9 +13,9 @@
     <button ng-click="login()">Login</button>
     <ul>
         <li ng-repeat="member in members">
-            Number : {{member.id}}<br/>
-            Name : {{member.username}}<br/>
-            Password : {{member.password}}<br/>
+            ID : {{member.creatorid}}<br/>
+            Name : {{member.destination}}<br/>
+            Password : {{member.description}}<br/>
         </li>
     </ul>
 </div>
