--- a/bin/client.html
+++ b/bin/client.html
@@ -33,7 +33,7 @@
 
 </div>
 
-<div class="jumbotron text-center red">
+<div class="jumbotron text-center ">
     <h1> Tripster</h1>
     <p> our travel partner</p>
 </div>
