error first page fixed

--- a/bin/client.html
+++ b/bin/client.html
@@ -4,10 +4,10 @@
 
     <meta charset="UTF-8">
     <title>Tripster</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
     <script src="client1.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="MainCtrl">
@@ -15,7 +15,7 @@
 
     <!--hide before login, -->
     <div class="pull-left">
-    <label >Welcome,  {{Name here}}!  </label>
+    <label >Welcome, !  </label>
     <button class="btn btn-default ">  <a href="addEvent.html"> add trip</a> </button>
     </div>
 
