--- a/client/client.html
+++ b/client/client.html
@@ -16,6 +16,7 @@
             ID : {{member.creatorid}}<br/>
             Name : {{member.destination}}<br/>
             Password : {{member.description}}<br/>
+            Date : {{member.date}}<br/>
         </li>
     </ul>
 </div>
