--- a/bin/client.html
+++ b/bin/client.html
@@ -23,10 +23,10 @@
     <form class="form-inline right pull-right">
         <div class="form-group">
             <label for="usr">ID: </label>
-            <input type="text" class="form-control" id="usr">
+            <input type="text" class="form-control" ng-model="namelogin" id="usr">
             <label for="pwd">Password:</label>
-            <input type="password" class="form-control" id="pwd">
-            <button type="submit" class="btn btn-default">submit</button>
+            <input type="password" class="form-control" ng-model="passlogin" id="pwd">
+            <button type="submit" class="btn btn-default" ng-click="login()">Submit</button>
         </div>
     </form>
 
