--- a/bin/addEvent.html
+++ b/bin/addEvent.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container">
-<label for="evt">ID </label>
+<label for="evt">ID: </label>
 <input type="text" class="form-control" id="id" ng-model="creatorid"/>
 <label for="evt">Event: </label>
 <input type="text" class="form-control" id="evt" ng-model="destination"/>
