--- a/bin/sign_up.html
+++ b/bin/sign_up.html
@@ -18,13 +18,13 @@
 
 <div class="container">
     <label for="usr">Username : </label>
-    <input required type="text" class="form-control" id="usr"/>
+    <input required type="text" class="form-control" ng-model="nname" id="usr"/>
     <label for="email">Email: </label>
-    <input required type="text" class="form-control" id="email"/>
+    <input required type="text" class="form-control" ng-model="email" id="email"/>
     <label for="pass">Password:</label>
-    <input required type="password"class="form-control" id="pass">
+    <input required type="password"class="form-control" ng-model="npasswor1" id="pass">
     <label for="cf">Confirm Password:</label>
-    <input required type="password" class="form-control" id="cf" />
+    <input required type="password" class="form-control" ng-model="npassword2" id="cf" />
 
     <button type="submit" ng-click="signup()" class="btn btn-default pull-right">Sign Up</button>
 </div>
