--- a/bin/sign_up.html
+++ b/bin/sign_up.html
@@ -22,7 +22,7 @@
     <label for="email">Email: </label>
     <input required type="text" class="form-control" ng-model="email" id="email"/>
     <label for="pass">Password:</label>
-    <input required type="password"class="form-control" ng-model="npasswor1" id="pass">
+    <input required type="password"class="form-control" ng-model="npassword1" id="pass">
     <label for="cf">Confirm Password:</label>
     <input required type="password" class="form-control" ng-model="npassword2" id="cf" />
 
