--- a/bin/addEvent.html
+++ b/bin/addEvent.html
@@ -11,6 +11,11 @@
 
 </head>
 <body ng-app="myApp" ng-controller="MainCtrl">
+<div class="pull-left">
+    <label >Welcome, !  </label>
+    <button class="btn btn-default ">  <a href="addEvent.html"> Add Trip</a> </button>
+    <button class="btn btn-default ">  <a href="#"> My Trip</a> </button>
+</div>
 <div class="jumbotron text-left ">
     <h1> Tripster</h1>
     <p> our travel partner</p>
