--- a/bin/client.html
+++ b/bin/client.html
@@ -16,7 +16,9 @@
     <!--hide before login, -->
     <div class="pull-left">
     <label >Welcome, !  </label>
-    <button class="btn btn-default ">  <a href="addEvent.html"> add trip</a> </button>
+    <button class="btn btn-default ">  <a href="addEvent.html"> Add Trip</a> </button>
+    <button class="btn btn-default ">  <a href="myTrips.html"> My Trip</a> </button>
+
     </div>
 
     <!--Hide after login-->
