--- a/bin/client.html
+++ b/bin/client.html
@@ -42,20 +42,20 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-sm-4">
-            <img src="map.png" align="middle">
+            <img src="../public/images/map.png" align="middle">
             <h3>Broadcast Your Trip</h3>
             <p>Have a plan for this weekend?</p>
             <p>You can now broadcast your trip plan while staying in Korea</p>
         </div>
 
         <div class="col-sm-4">
-            <img src="people.png" align="middle">
+            <img src="../public/images/people.png" align="middle">
             <h3>Get Members</h3>
             <p>By broadcasting your event, other ICT.IDN program members who also interested can join your trip.</p>
 
         </div>
         <div class="col-sm-4">
-            <img src="road-joining.png" align="middle">
+            <img src="../public/images/road-joining.png" align="middle">
             <h3>Join other Trip</h3>
             <p>If you're interested in joining a trip but lazy to plan go find someone who need accompany in their trip</p>
 
