--- a/bin/client.html
+++ b/bin/client.html
@@ -68,13 +68,14 @@
     <h3>list of trips</h3>
     <table class="table table-striped">
     <thead>
-    <tr>
+    <a href="google.com"><
     <tr>
         <th>Owner</th>
         <th>Destination</th>
         <th>Date</th>
         <th>Members</th>
     </tr>
+        /a>
     </thead>
     <tbody>
     <tr ng-repeat="member in members">
