--- a/bin/showEvent.html
+++ b/bin/showEvent.html
@@ -61,7 +61,7 @@
         <tr><td>Members: </td> </tr>
         </thead>
         <tbody>
-        <td>owner ,</td>
+        <td>creator : {{creators[0].username}}</td>
         <tr ng-repeat="member in members">
             <td>{{member.username}}</td>
         </tr>
