--- a/bin/showEvent.html
+++ b/bin/showEvent.html
@@ -27,15 +27,15 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="gwanggyosan.PNG" alt="Chania">
+                    <img src="../public/images/gwanggyosan.PNG" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="import.png" alt="Chania">
+                    <img src="../public/images/import.png" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="Old_Castle_PNG_Clipart_Image.png" alt="Flower">
+                    <img src="../public/images/Old_Castle_PNG_Clipart_Image.png" alt="Flower">
                 </div>
 
                 <div class="item">
