--- a/bin/showEvent.html
+++ b/bin/showEvent.html
@@ -27,19 +27,19 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="../public/images/gwanggyosan.PNG" alt="Chania">
+                    <img src="../public/images/1.jpg" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="../public/images/import.png" alt="Chania">
+                    <img src="../public/images/2.jpg" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="../public/images/Old_Castle_PNG_Clipart_Image.png" alt="Flower">
+                    <img src="../public/images/3.jpg" alt="Flower">
                 </div>
 
                 <div class="item">
-                    <img src="sardines%20abc.jpg" alt="Flower">
+                    <img src="../public/images/4.jpg" alt="Flower">
                 </div>
             </div>
 
